@@ -1,5 +1,14 @@
 2007-05-01  Wakaba  <wakaba@suika.fam.cx>
 
+	* HTML.pm.src (parse_string): New method.
+	(get_inner_html): Renamed from |inner_html|.
+
+	* Makefile: A rule for |HTML.html| is added.
+
+	* HTML.pod: New documentation.
+
+2007-05-01  Wakaba  <wakaba@suika.fam.cx>
+
 	* NanoDOM.pm (last_child, previous_sibling): New attributes.
 	(clone_node): Attribute nodes were not completely copied.
 
